@@ -1,0 +1,13 @@
+<?php
+
+namespace App\Http\Controllers;
+
+use Illuminate\Http\Request;
+use Session;
+
+class SiteController extends Controller
+{
+    // public function privateWelcome(Request $request){
+    //   return view('adminPages/adminWelcome');
+    // }
+}
