@@ -3,7 +3,8 @@
 namespace App\Http\Middleware;
 
 use Closure;
-
+use App\User;
+echo 'hola';
 class CheckRole
 {
     /**
@@ -13,11 +14,15 @@ class CheckRole
      * @param  \Closure  $next
      * @return mixed
      */
-    public function handle($request, Closure $next, $role)
+
+    public function handle($request, Closure $next)
     {
-      if ($request->user()->hasRole($role) {
-        return redirect('/privateWelcome');
+      $userRol = User::find('rol');
+
+      if($userRol == 1)
+      {
+        return $next($request);
       }
-      return $next($request);
+      return redirect('/');
     }
 }
